Nome completo,foto atual com descricao

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <style></style>
 </head>
 <body>
-    
+    <h1>Seja muito bem vindo(a) a minha página!</h1>
+
+    <img src="./images/Foto Gletison Junior.jpeg" alt="Picture of Gletison Ramos">
+
+    <p>Esse aí da foto sou eu, prazer meu nome é Gletison Ramos da Silva Júnior.</p>
+    <hr>
+
+    <p>Nascido, crescido e morando em Belo Horizonte, Minas Gerais, Brasil.</p>
 </body>
 </html>
