--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <h1>Seja muito bem vindo(a) a minha página!</h1>
 
-    <img src="./images/Foto Gletison Junior.jpeg" alt="Picture of Gletison Ramos">
+    <img width="400px" src="./images/Foto Gletison Junior.jpeg" alt="Picture of Gletison Ramos">
 
     <p>Esse aí da foto sou eu, prazer meu nome é Gletison Ramos da Silva Júnior.</p>
     <hr>
 
-    <p>Nascido, crescido e morando em Belo Horizonte, Minas Gerais, Brasil.</p>
+    <p>Amante de jogos online e indies, nascido, crescido e morando em Belo Horizonte, Minas Gerais, Brasil.</p>
+
 </body>
 </html>
