Adicionando areas em negrito e italico

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <h3>Um pouco sobre <a href="#foto">mim</a></h3>
     
-        <p>Amante de jogos indies, nascido, crescido e morando em Belo Horizonte, Minas Gerais, Brasil.</p>
+        <p>Amante de jogos <em>indies</em>, nascido, crescido e morando em <strong>Belo Horizonte, Minas Gerais, Brasil</strong>.</p>
+
+        <p>Não resisto a um bom anime, então se têm alguma sugestâo que eu possa assistir no <a href="https://animeshouse.net/" target="_blank">Animes House</a> pode me mandar por <a href="mailto:gletisonjr@gmail.com" target="_blank">e-mail</a>. Mas se não tiver lá também me manda do mesmo jeito! Vou adorar novas indicações!</p>
     
     <hr>
 
