corrigindo links internos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style></style>
 </head>
 <body>
-    <h1 id="top">Seja muito bem vindo(a) a minha página!</h1>
+    <h1 id="top">Seja muito bem vindo(a) à minha página!</h1>
 
         <img id="picture" width="400px" src="./images/Foto Gletison Junior.jpeg" alt="Picture of Gletison Ramos">
 
@@ -50,14 +50,14 @@
             </li>
         </ul>
 
-    <a href="#topo">topo</a>
+    <a href="#top">topo</a>
 
     <hr>
     
     <ul>
-        <li><a href="top">Topo</a></li>
-        <li><a href="about">Sobre mim</a></li>
-        <li><a href="skills">Minhas habilidades</a></li>
+        <li><a href="#top">Topo</a></li>
+        <li><a href="#about">Sobre mim</a></li>
+        <li><a href="#skills">Minhas habilidades</a></li>
     </ul>
 
 </body>
